# trache

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
licenses/: BEERWARE  CAREWARE  DBAD  GLWTPL  JSON-DBE
src/: interact.rs  main.rs
systests/: compare-rm.sh
tests/: cli.rs  macos_unusable_trash.rs
trash-patched/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
trash-patched/src/: freedesktop.rs  lib.rs  tests.rs  windows.rs
trash-patched/src/macos/: mod.rs  tests.rs
