[package]
name = "trache"
version = "0.1.0"
edition = "2024"
description = "A CLI for moving files to trash"
license = "MIT"

[dependencies]
trash = "5"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
globset = "0.4"
regex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
